# notifying-buddy

./: Cargo.toml  README.md
lib-notifier/: Cargo.toml
lib-notifier/src/: dispatcher.rs  lib.rs  scheduler.rs
notifying-buddy/: Cargo.toml
notifying-buddy/src/: main.rs
