[package]
name = "lib-notifier"
version = "0.1.0"
authors = ["Matt Rabitsky <mRabitsky@gmail.com>"]
edition = "2018"

[dependencies]
itertools = "^0.8.0"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "^0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "^3.5.0"

[target.'cfg(windows)'.dependencies]
winrt = {version = "^0.3.0", features = ["windows-data", "windows-ui"]}
